# ticketing-system

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: architecture-reviewer.md  rust-reviewer.md  security-reviewer.md
.claude/rules/: 01-core-philosophy.md  02-rust-language.md  03-performance.md  04-architecture.md  05-testing.md  06-benchmarking.md  07-documentation.md  08-ai-behavior.md
.claude/skills/db/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/logs/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/security-review/: SKILL.md
.claude/skills/test/: SKILL.md
.cursor/: rules.md
.cursor/commands/: implement-feature.md
.cursor/rules/: 01-core-philosophy.md  03-performance.md  04-architecture.md  05-testing.md  06-benchmarking.md  08-ai-behavior.md
docs/: ai-guide.md  architecture.md  domain-glossary.md
proto/: auth.proto
scripts/: init-db.sql
services/api-gateway/: Cargo.toml  Dockerfile
services/api-gateway/src/: circuit_breaker.rs  config.rs  grpc_client.rs  handlers.rs  main.rs  router.rs  schema.rs
services/auth-service/: Cargo.toml  Dockerfile  README.md  build.rs  diesel.toml  docker-entrypoint.sh
services/auth-service/migrations/00000000000001_create_users/: up.sql
services/auth-service/src/: lib.rs  main.rs
services/auth-service/src/application/: mod.rs
services/auth-service/src/application/commands/: login_user.rs  mod.rs  register_user.rs
services/auth-service/src/domain/: auth.rs  error.rs  mod.rs  user.rs
services/auth-service/src/infrastructure/: config.rs  mod.rs
services/auth-service/src/infrastructure/cache/: mod.rs  token_cache.rs
services/auth-service/src/infrastructure/db/: connection.rs  mod.rs  models.rs  schema.rs  seed.rs  user_repository_diesel.rs
services/auth-service/src/infrastructure/security/: argon2_password_hasher.rs  jwt_token_service.rs  mod.rs
services/auth-service/src/interface/: mod.rs
services/auth-service/src/interface/grpc/: mod.rs  service.rs
services/auth-service/src/interface/http/: handlers.rs  mod.rs  router.rs
services/auth-service/tests/: integration_test.rs
