[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"
description = "API Gateway - GraphQL frontend that routes to backend gRPC services"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "set-header", "timeout"] }

# GraphQL
async-graphql = "7"
async-graphql-axum = "7"

# gRPC client
tonic = "0.12"
prost = "0.13"

# Rate limiting
governor = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
thiserror = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[build-dependencies]
tonic-build = "0.12"
protobuf-src = "2"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
