[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"
description = "Authentication service with JWT support"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "set-header"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2"
r2d2 = "0.8"

# Security
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# Caching
moka = { version = "0.12", features = ["sync"] }

# Rate limiting
governor = "0.6"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[build-dependencies]
tonic-build = "0.12"
protobuf-src = "2"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
